* feat(ProductCard.tsx): reorder CSS classes for better readability * fix(ProductCard.tsx):

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -189,7 +189,7 @@ shop-pay-button {
   }
 
   .swimlane {
-    @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll px-6 pb-4;
+    @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll pb-4;
   }
 }
 
